fix: modal not displaying properly on small screens

--- a/packages/appstore/src/components/ready-to-update-wallets/ready-to-update-wallets.scss
+++ b/packages/appstore/src/components/ready-to-update-wallets/ready-to-update-wallets.scss
@@ -4,28 +4,6 @@
     width: 100%;
     height: 100%;
 
-    &--icon {
-        max-width: 20rem;
-        max-height: 12rem;
-        width: 100%;
-    }
-
-    &--checkbox {
-        .dc-checkbox__label {
-            @include mobile {
-                font-size: var(--text-size-xxs);
-            }
-        }
-    }
-
-    &--body {
-        margin: 0 auto;
-        max-width: 73.9rem;
-        @include mobile {
-            padding: 0rem 1.6rem;
-        }
-    }
-
     &--body,
     &--text {
         display: flex;
@@ -34,21 +12,42 @@
         align-items: center;
     }
 
-    &--text {
-        margin: 2.4rem 0;
+    &--text,
+    &--footer {
         gap: 0.8rem;
     }
 
+    &--info-section,
+    &--footer {
+        padding: 1.6rem;
+    }
+
+    &--image {
+        position: relative;
+        left: 1.5rem;
+    }
+
+    &--body {
+        margin: 0 auto;
+        max-width: 73.9rem;
+        @include mobile {
+            margin: 1.6rem 1.6rem 3.2rem;
+        }
+    }
+
     &--info-section {
+        margin-top: 2.4rem;
         background-color: var(--transparent-info);
         border-radius: 0.8rem;
-        padding: 1.6rem;
-        margin-bottom: 2.4rem;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         justify-content: center;
         gap: 0.8rem;
+
+        @include mobile {
+            margin-top: 1.6rem;
+        }
 
         &__text {
             display: grid;
@@ -57,14 +56,22 @@
             align-items: center;
         }
     }
+
+    &--checkbox {
+        margin-top: 2.4rem;
+        .dc-checkbox__label {
+            @include mobile {
+                font-size: var(--text-size-xxs);
+            }
+        }
+    }
+
     // This won't be needed once everything is merged
     &--footer {
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        gap: 0.8rem;
-        padding: 1.6rem;
         box-shadow: inset 0rem 0.2rem 0rem var(--general-section-1);
 
         &__btn {
